--- a/loopstudios-landing-page-main/index.html
+++ b/loopstudios-landing-page-main/index.html
@@ -9,6 +9,8 @@
   <script src="script.js" defer></script>
   
   <title>Frontend Mentor | Loopstudios landing page</title>
+  <!DOCTYPE html>
+  
 </head>
 <body>
 
