--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="script.js" defer></script>
 
     <title>Frontend Mentor | [Blogr]</title>
