--- a/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/social-media-dashboard-with-theme-switcher-master/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="script.js" defer></script>
 
     <title>Frontend Mentor | [dashboard]</title>
