--- a/rest-countries-api-with-color-theme-switcher-master/index.html
+++ b/rest-countries-api-with-color-theme-switcher-master/index.html
@@ -14,32 +14,51 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Countries</title>
   </head>
   <body class="dark">
     <header>
       <h2>Where in the world?</h2>
-      <span>Dark mode</span>
+      <div class="theme">
+        <i class="fa-solid fa-moon"></i>
+        <span>Dark mode</span>
+      </div>
     </header>
-
     <main>
-      <div id="app">
+      <div id="app" class="main-container">
         <section class="top-section" v-if="!detailActive">
           <input
             type="text"
             placeholder="Search for a country..."
             v-model="searchTerm"
-            @keyUp="getDetails"
+            @keyUp.prevent="processInput"
           />
-          {{updatedData}}
+          <div class="results">
+            <ul>
+              <li
+                v-for="result in matchingCountries"
+                @click="showDetails(result)"
+              >
+                {{result}}
+              </li>
+            </ul>
+          </div>
 
           <div class="select-wrapper">
             <select name="select" id="select">
               <option disabled hidden selected value>Filter by Region</option>
-              <option value="America">America</option>
-              <option value="Asia">Asia</option>
-              <option value="Europe">Europe</option>
-              <option value="Oceania">Oceania</option>
+              <option value="America" @click="filterCountries('americas')">
+                America
+              </option>
+              <option value="Asia" @click="filterCountries('asia')">
+                Asia
+              </option>
+              <option value="Europe" @click="filterCountries('europe')">
+                Europe
+              </option>
+              <option value="Oceania" @click="filterCountries('oceania')">
+                Oceania
+              </option>
             </select>
           </div>
           <i class="fas fa-search icon"></i>
@@ -48,7 +67,12 @@
           class="country-section"
           v-if="countries.length > 0 && !detailActive"
         >
-          <div v-for="country in countries" :key="country.name" class="card">
+          <div
+            v-for="country in countries"
+            :key="country.name"
+            class="card"
+            @click="showDetails(country.name)"
+          >
             <div class="flag">
               <img :src="country.flags.svg" alt="flag" />
             </div>
@@ -72,7 +96,65 @@
           </div>
         </section>
         <section class="detail-page" v-if="detailActive">
-          <button class="btn">Back</button>
+          <button class="btn" @click="goBack">
+            <i class="fa-solid fa-arrow-left"></i> Back
+          </button>
+          <div class="detail-page__container">
+            <img :src="countryDetails.flags.svg" alt="flag" class="big-flag" />
+
+            <div class="info-container">
+              <h2 class="country-name">{{countryDetails.name}}</h2>
+              <div class="info-stats">
+                <div class="left">
+                  <div class="info__row">
+                    <span class="type"> Native Name: </span>
+                    <span class="value">
+                      {{countryDetails.languages[0].nativeName}}
+                    </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Population: </span>
+                    <span class="value"> {{countryDetails.population}} </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Region: </span>
+                    <span class="value"> {{countryDetails.region}} </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Sub Region: </span>
+                    <span class="value"> {{countryDetails.subregion}} </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Capital: </span>
+                    <span class="value"> {{countryDetails.capital}} </span>
+                  </div>
+                </div>
+                <div class="right">
+                  <div class="info__row">
+                    <span class="type"> Top Level Domain: </span>
+                    <span class="value">
+                      {{countryDetails.topLevelDomain[0]}}
+                    </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Currencies: </span>
+                    <span
+                      class="value"
+                      v-for="currency in countryDetails.currencies"
+                    >
+                      {{ currency.code }}
+                    </span>
+                  </div>
+                  <div class="info__row">
+                    <span class="type"> Languages: </span>
+                    <span v-for="language in countryDetails.languages">
+                      {{language.name}}
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
